chore: add @tailwindcss/line-clamp plugin and update Tailwind config

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "^24.0.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
