--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.10",
+    "lucide-react": "^0.518.0",
     "mongoose": "^8.16.0",
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
@@ -20,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "recharts": "^2.15.3",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
